# BirdBridge

./: .gitignore  CMakeLists.txt  README.md  需求设计.md
bridgeserver/: CMakeLists.txt  main.cpp
bridgeserver/server/: CMakeLists.txt
bridgeserver/server/include/: json.hpp  server.h
bridgeserver/server/src/: server.cpp
include/server/: server.h
include/socket/: socket.h
